# song-with-number

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml
lyrics-scraper/: Pipfile  main.py
src/: main.rs
