[package]
name = "song-with-number"
version = "0.1.0"
authors = ["flip1995 <hello@philkrones.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
csv = "1.1.1"
english-numbers = "0.3.3"
serde = { version="1.0", features=["derive"] }
